# Robotic-Platform

./: .apply-ai-fixes.ps1  .clinerules  .cursorignore  .dockerignore  .env.example  .gitignore  .pr-body.md  .pre-commit-config.yaml  .prettierignore  AGENTS.md  AUTO_FIX_SUMMARY.md  CLAUDE.md  FIXES_LOG.md  IDE_SETUP_GUIDE.md  MEMORY.md  MEMORY_SYSTEM_GUIDE.md  Makefile  Obsidian Quick Start Guide.md  PLAN.md  PROJECT_CONTEXT.md  README.md  README_CatPaw_Monitor.md  Skills_Inventory_2026-06-19.xlsx  _apply_all_fixes.py  _apply_fixes.py  _apply_fixes3.py  _apply_remaining.py  _check_pr30.py  _check_pr54_v2.py  _commit_msg.txt  _final_fix.py  _find_zewm.py  _fix_all.py  _fix_all_pr34.py  _fix_final.py  _fix_lint6.py  _fix_lint7.py  _fix_lint8.py  _fix_lint9.py  _fix_pr28_atomic.py  (+56 more)
.claude/: mcp.json  reference-snapshot.json  settings.json  today-session-context.json
.cursor/: MCP_SETUP.md  SKILLS_SETUP_SUMMARY.md  mcp-config.json
.githooks/: pre-commit
.github/: pull_request_template.md
.obsidian/: INSTALLATION_CHECKLIST.md  INSTALL_PLUGINS.md  app.json  plugins-config.json
.qoder/: MCP_SETUP_GUIDE.md  MIGRATION_SUMMARY.md  mcp.json.disabled
.zcode/: config.json
00_inbox/: README.md  Skills_Activation_2026-06-19.xlsx  Skills_Combined_2026-06-19.xlsx
01_architecture/: PHASE0_DUAL_STRATEGY_FINDING.md
04_development/: monitoring-access-guide.md
05_reference/: Migration Log.md  README.md
10_adr/: ADR-001-mqtt-over-http.md  ADR-002-nodered-over-custom-state-machine.md  ADR-003-outbox-pattern-for-sap-sync.md  ADR-004-redis-over-postgresql-for-sessions.md  (+3 more)
(+617 files in other folders)
