[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewm-robot-platform-core"
version = "5.0.0"
description = "SAP-EWM multi-brand robot dispatch platform — v5.0 fixed-lane + traffic-light core"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EWM Robot Platform Team"},
]
keywords = ["robot", "dispatch", "sap", "ewm", "vda5050", "open-rmf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "paho-mqtt>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "traffic_coordinator_v5*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP017"]  # team preference: timezone.utc over datetime.UTC

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["core/tests", "traffic_coordinator_v5/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
